@@ -1,3 +1,9 @@
+** v4.58 for Shadowland Pre-Patch, 17.10.2020**
+* More fixes/updates to my new MicroBar -> own Option-Category
+* Fixed an error with the ActionBarProfile skin
+* Added some more frames to the blacklist on the FlightMode
+
+
 ** v4.57 for Shadowland Pre-Patch, 17.10.2020**
 * Updated my DPS Layout due to some backdrop changes in ElvUI
 * Fixed an error in LFG Info
